--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -1,4 +1,35 @@
 header.header
-    .header__topline
-        
-
+    .container
+        .header__logo
+            a.header__link(href='#')
+                img(src='img/svg/logo.svg')
+        nav.header__nav
+            ul.header__ul
+                li.header__li
+                    a.header__link(href='#') About Us
+                li.header__li
+                    a.header__link(href='#') Easy Money
+                li.header__li
+                    a.header__link(href='#') Testimonials
+        .socials
+            a.socials__link(href='')
+                img(src='img/svg/twitter.svg')
+            a.socials__link(href='')
+                img(src='img/svg/facebook.svg')
+            a.socials__link(href='')
+                img(src='img/svg/insta.svg')
+            a.socials__link(href='')
+                img(src='img/svg/ufo.svg')
+    .people
+        .container
+            .people__title-outer
+                h1.people__h1 Play the Virtual Stock Market Win College Money
+                h2.people__h2   Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch
+                h3.people__h3  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch
+                form.join
+                    input(type='email' placeholder='Email')
+                    button(type='submit')
+                        |JOIN the Wait List
+                    p.form__text We don’t spam you, but will alert you when starting awesome contests
+            .people__img
+                img(src='img/svg/People-with-money.svg')
