--- a/app/pug/blocks/_layout.pug
+++ b/app/pug/blocks/_layout.pug
@@ -8,7 +8,8 @@ html(lang="ru")
     link(rel="stylesheet",type="text/css", href="css/main.css")
     link(rel="stylesheet",type="text/css", href="fonts/fonts.css")
     link(href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous")
-    title Adel
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet")
+    title SignumCity
   body
     include _preloader
     #contentWrapper.content-wrapper
