--- a/app/sass/ui/_ui-components.sass
+++ b/app/sass/ui/_ui-components.sass
@@ -4,6 +4,8 @@ body
   font-size: 16px
   letter-spacing: -0.2px
   color: #000000
+  font-family: 'Open Sans', sans-serif
+  font-family: 'Circe'
 
   & *
     margin: 0
