Editing first section

--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -1,6 +1,16 @@
 extends blocks/_layout
 
 append content
-
-
+    section.about
+        .container
+            .about__wrapper
+                .about__img
+                    img(src="img/svg/People-with-light.svg")
+                .about__outer
+                    .about__title ABOUT US
+                    p.about__text We're a bunch of fintech coders who think you should be able to play with fake money to win real money for college. And we figured out how to do that with sponsored contests.
+                    p.about__text We aim to create the largest ongoing scholarship giveaway in history.
+    section.easy-money
+        .container
+            .easy-money-wrapper
 
