--- a/app/css/main.css
+++ b/app/css/main.css
@@ -106,25 +106,90 @@ select, input, textarea {
   display: flex;
   margin: 0 -15px; }
 
-.container {
-  width: 100%;
+.about__img {
+  max-width: 533px;
+  width: 50%;
+  margin-bottom: 65px; }
+  .about__img img {
+    margin-left: -33px; }
+
+.about__wrapper {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 28px 0; }
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 35px;
+  margin-top: 35px;
+  width: 100%; }
+
+.about__outer {
+  width: 50%;
+  margin-left: 152px; }
+
+.about__title {
+  font-family: Circe;
+  line-height: normal;
+  font-size: 35px;
+  color: #175E65; }
+
+.about__text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  color: #175E65; }
+  .about__text:first-child {
+    font-weight: 300;
+    margin-top: 26px; }
+  .about__text:last-child {
+    font-weight: bold;
+    margin-top: 25px; }
+
+.easy-money {
+  background: url(../img/Background-header.png) no-repeat; }
+
+.container {
+  max-width: 1100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin: 0 auto; }
+  @media (max-width: 1100px) {
+    .container {
+      padding: 0 17px; } }
+  @media (max-width: 768px) {
+    .container {
+      padding: 0 17px; } }
 
 .header {
   max-width: 1440px;
   margin: 0 auto;
+  min-height: 743px;
   background: url(../img/Background-header.png) no-repeat;
   -webkit-background-size: cover;
-          background-size: cover;
-  min-height: 743px; }
+          background-size: cover; }
+  @media (max-width: 768px) {
+    .header {
+      background: url(../img/Background-header-mob.png) no-repeat;
+      -webkit-background-size: cover;
+              background-size: cover; } }
+  .header__wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 28px; }
   .header__ul {
     display: -webkit-box;
     display: -webkit-flex;
@@ -139,10 +204,155 @@ select, input, textarea {
     font-size: 18px;
     color: #fff; }
 
-.socials {
-  margin-left: 160px; }
-  .socials__link {
-    margin: 0 10px; }
+.socials__link {
+  margin: 0 10px; }
+
+.mob__nav {
+  display: none; }
+
+.people {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (max-width: 1024px) {
+    .people {
+      margin: 0 auto; } }
+  .people__title-outer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 621px;
+    margin-top: 80px; }
+    @media (max-width: 1024px) {
+      .people__title-outer {
+        margin-top: 46px; } }
+  .people__h1 {
+    font-family: Circe;
+    font-size: 55px;
+    line-height: 73px;
+    color: #fff;
+    max-width: 621px; }
+    @media (max-width: 768px) {
+      .people__h1 {
+        font-size: 35px;
+        line-height: normal; } }
+  .people__h2 {
+    color: #FFF5BB;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 23px;
+    line-height: 34px;
+    margin-top: 32px;
+    max-width: 563px; }
+    @media (max-width: 768px) {
+      .people__h2 {
+        margin-top: 17px;
+        font-size: 16px;
+        line-height: 24px; } }
+  .people__h3 {
+    font-family: Open Sans;
+    font-weight: 300;
+    line-height: 27px;
+    font-size: 18px;
+    color: #fff;
+    max-width: 540px;
+    margin-top: 11px; }
+    @media (max-width: 768px) {
+      .people__h3 {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 24px; } }
+  .people__text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    max-width: 524px;
+    margin-top: 7px; }
+  .people__img {
+    margin-top: 70px;
+    margin-left: 209px; }
+    @media (max-width: 1024px) {
+      .people__img {
+        display: none; } }
+
+.form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  max-width: 540px;
+  margin-top: 34px;
+  position: relative; }
+  @media (max-width: 768px) {
+    .form {
+      margin-top: 24px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+  .form__input {
+    min-width: 414px;
+    background: #fff;
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    font-family: 'Open Sans', sans-serif;
+    padding: 12px 16px;
+    font-weight: normal;
+    font-size: 18px;
+    color: #175E65; }
+    @media (max-width: 768px) {
+      .form__input {
+        width: 100%; } }
+  .form__btn {
+    max-width: 240px;
+    background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
+    background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: -o-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%);
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    color: #fff;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 13px 0;
+    position: absolute;
+    left: 53%; }
+    @media (max-width: 768px) {
+      .form__btn {
+        max-width: 100%;
+        position: relative;
+        left: 0;
+        margin-top: 10px; } }
 
 html, body {
   width: 100%;
