--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -12,5 +12,28 @@ append content
                     p.about__text We aim to create the largest ongoing scholarship giveaway in history.
     section.easy-money
         .container
-            .easy-money-wrapper
+            .easy-money__wrapper
+                h1.easy-money__title EASY Money
+                .easy-money__item-outer
+                    .easy-money__item
+                        img(src='img/svg/Sing-up.svg')
+                        .easy-money__item-title Sign Up
+                        .easy-money__item-text Only your name, email and screen name, we never “Facebook” you
+                    .easy-money__item
+                        img(src='img/svg/Play.svg')
+                        .easy-money__item-title Play
+                        .easy-money__item-text Unleash your inner Warren Buffet playing our dynamic games
+                    .easy-money__item
+                        img(src='img/svg/Win.svg')
+                        .easy-money__item-title Win
+                        .easy-money__item-text Tell us where to send the “crap tons” of money if you wi
+                .easy-money__form
+                    h2.easy-money__form-h2 | No boring scholarship essay!
+                        br
+                        | Play stock investing games to win!
+                    form.easy__form
+                        input.easy__form-input(type='email' placeholder='Email')
+                        button.easy__form-btn(type='submit')
+                            | JOIN the Wait List
+                        p.easy__form-text Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.
 
