--- a/app/css/main.css
+++ b/app/css/main.css
@@ -148,7 +148,148 @@ select, input, textarea {
     margin-top: 25px; }
 
 .easy-money {
-  background: url(../img/Background-header.png) no-repeat; }
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+  background: url(../img/Background-easy-money.png) no-repeat;
+  background-position-x: center; }
+  .easy-money__wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 121px;
+    text-align: center; }
+  .easy-money__title {
+    color: #fff;
+    font-family: Circe;
+    font-size: 35px;
+    font-weight: bold; }
+  .easy-money__item-outer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 77px;
+    font-family: 'Open Sans', sans-serif;
+    color: #FFF5BB; }
+  .easy-money__item {
+    width: 33%;
+    max-width: 300px;
+    margin: 0 50px; }
+  .easy-money__item-title {
+    font-size: 23px;
+    font-weight: bold;
+    margin-top: 21px; }
+  .easy-money__form {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 110px; }
+  .easy-money__form-h2 {
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 23px;
+    font-weight: bold;
+    text-align: left; }
+
+.easy__form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+    flex-wrap-align-items: center;
+  width: 100%;
+  max-width: 540px;
+  position: relative; }
+  @media (max-width: 768px) {
+    .easy__form {
+      margin-top: 24px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+  .easy__form-input {
+    min-width: 414px;
+    background: #fff;
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    font-family: 'Open Sans', sans-serif;
+    padding: 12px 16px;
+    font-weight: normal;
+    font-size: 18px;
+    color: #175E65; }
+    @media (max-width: 768px) {
+      .easy__form-input {
+        width: 100%; } }
+  .easy__form-btn {
+    max-width: 240px;
+    background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
+    background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: -o-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%);
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    color: #fff;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 13px 0;
+    position: absolute;
+    left: 53%;
+    top: 0; }
+    @media (max-width: 768px) {
+      .easy__form-btn {
+        max-width: 100%;
+        position: relative;
+        left: 0;
+        margin-top: 10px; } }
+  .easy__form-text {
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 7px;
+    text-align: left;
+    margin-bottom: 107px; }
 
 .container {
   max-width: 1100px;
@@ -285,7 +426,7 @@ select, input, textarea {
       .people__img {
         display: none; } }
 
-.form {
+.header__form {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -302,14 +443,14 @@ select, input, textarea {
   margin-top: 34px;
   position: relative; }
   @media (max-width: 768px) {
-    .form {
+    .header__form {
       margin-top: 24px;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
               flex-direction: column; } }
-  .form__input {
+  .header__form-input {
     min-width: 414px;
     background: #fff;
     -webkit-border-radius: 60px;
@@ -320,9 +461,9 @@ select, input, textarea {
     font-size: 18px;
     color: #175E65; }
     @media (max-width: 768px) {
-      .form__input {
+      .header__form-input {
         width: 100%; } }
-  .form__btn {
+  .header__form-btn {
     max-width: 240px;
     background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
     background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
@@ -348,7 +489,7 @@ select, input, textarea {
     position: absolute;
     left: 53%; }
     @media (max-width: 768px) {
-      .form__btn {
+      .header__form-btn {
         max-width: 100%;
         position: relative;
         left: 0;
