--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -47,9 +47,9 @@ header.header
                     | Win College Money
                 h2.people__h2   Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch
                 h3.people__h3  Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.
-                form.form
-                    input.form__input(type='email' placeholder='Email')
-                    button.form__btn(type='submit')
+                form.header__form
+                    input.header__form-input(type='email' placeholder='Email')
+                    button.header__form-btn(type='submit')
                         |JOIN the Wait List
                 p.people__text We don’t spam you, but will alert you when starting awesome contests
             .people__img
