--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -120,7 +120,7 @@
       display: none
 
 
-.form
+.header__form
   display: flex
   flex-wrap: wrap
   align-items: center
@@ -133,7 +133,7 @@
     margin-top: 24px
     flex-direction: column
 
-  &__input
+  &-input
     min-width: 414px
     background: #fff
     border-radius: 60px
@@ -146,7 +146,7 @@
     @include media(768)
       width: 100%
 
-  &__btn
+  &-btn
     max-width: 240px
     background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
     border-radius: 60px
