--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -39,4 +39,107 @@
       margin-top: 25px
       
 .easy-money
-  background: url(../img/Background-header.png) no-repeat
+  display: flex
+  justify-content: center
+  margin: 0 auto
+  background: url(../img/Background-easy-money.png) no-repeat
+  background-position-x: center
+
+  &__wrapper
+    display: flex
+    width: 100%
+    flex-direction: column
+    margin-top: 121px
+    text-align: center
+
+  &__title
+    color: #fff
+    font-family: Circe
+    font-size: 35px
+    font-weight: bold
+
+  &__item-outer
+    display: flex
+    justify-content: center
+    margin-top: 77px
+    font-family: 'Open Sans', sans-serif
+    color: #FFF5BB
+
+  &__item
+    width: 33%
+    max-width: 300px
+    margin: 0 50px
+
+  &__item-title
+    font-size: 23px
+    font-weight: bold
+    margin-top: 21px
+
+  &__form
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+    margin-top: 110px
+
+  &__form-h2
+    color: #fff
+    font-family: 'Open Sans', sans-serif
+    font-size: 23px
+    font-weight: bold
+    text-align: left
+
+.easy__form
+  display: flex
+  flex-wrap: wrap
+      align-items: center
+  width: 100%
+  max-width: 540px
+  position: relative
+
+  @include media(768)
+    margin-top: 24px
+    flex-direction: column
+
+  &-input
+    min-width: 414px
+    background: #fff
+    border-radius: 60px
+    font-family: 'Open Sans', sans-serif
+    padding: 12px 16px
+    font-weight: normal
+    font-size: 18px
+    color: #175E65
+
+    @include media(768)
+      width: 100%
+
+  &-btn
+    max-width: 240px
+    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
+    border-radius: 60px
+    color: #fff
+    font-size: 18px
+    font-family: 'Open Sans', sans-serif
+    font-weight: bold
+    text-transform: uppercase
+    display: flex
+    width: 100%
+    justify-content: center
+    padding: 13px 0
+    position: absolute
+    left: 53%
+    top: 0
+
+    @include media(768)
+      max-width: 100%
+      position: relative
+      left: 0
+      margin-top: 10px
+
+  &-text
+    color: #fff
+    font-size: 16px
+    font-family: 'Open Sans', sans-serif
+    margin-top: 7px
+    text-align: left
+    margin-bottom: 107px
