--- a/app/css/main.css
+++ b/app/css/main.css
@@ -110,8 +110,17 @@ select, input, textarea {
   max-width: 533px;
   width: 50%;
   margin-bottom: 65px; }
+  @media (max-width: 1024px) {
+    .about__img {
+      width: 100%; } }
   .about__img img {
     margin-left: -33px; }
+    @media (max-width: 1200px) {
+      .about__img img {
+        margin-left: 0; } }
+  @media (max-width: 1024px) {
+    .about__img {
+      margin-bottom: 20px; } }
 
 .about__wrapper {
   display: -webkit-box;
@@ -125,10 +134,28 @@ select, input, textarea {
   margin-top: 35px;
   margin-top: 35px;
   width: 100%; }
+  @media (max-width: 1024px) {
+    .about__wrapper {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; } }
 
 .about__outer {
   width: 50%;
   margin-left: 152px; }
+  @media (max-width: 1024px) {
+    .about__outer {
+      margin-left: 0;
+      width: 100%; } }
 
 .about__title {
   font-family: Circe;
@@ -146,12 +173,19 @@ select, input, textarea {
   .about__text:last-child {
     font-weight: bold;
     margin-top: 25px; }
+    @media (max-width: 1024px) {
+      .about__text:last-child {
+        margin-bottom: 49px; } }
 
 .easy-money {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -159,6 +193,12 @@ select, input, textarea {
   margin: 0 auto;
   background: url(../img/Background-easy-money.png) no-repeat;
   background-position-x: center; }
+  @media (max-width: 768px) {
+    .easy-money {
+      background: url(../img/Background-easy-money-mob.png) no-repeat;
+      background-position-x: center;
+      -webkit-background-size: cover;
+              background-size: cover; } }
   .easy-money__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -172,6 +212,9 @@ select, input, textarea {
             flex-direction: column;
     margin-top: 121px;
     text-align: center; }
+    @media (max-width: 1024px) {
+      .easy-money__wrapper {
+        margin-top: 49px; } }
   .easy-money__title {
     color: #fff;
     font-family: Circe;
@@ -188,11 +231,31 @@ select, input, textarea {
             justify-content: center;
     margin-top: 77px;
     font-family: 'Open Sans', sans-serif;
-    color: #FFF5BB; }
+    color: #FFF5BB;
+    width: 100%;
+    max-width: 1024px; }
+    @media (max-width: 1024px) {
+      .easy-money__item-outer {
+        margin-top: 31px; } }
   .easy-money__item {
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     width: 33%;
     max-width: 300px;
     margin: 0 50px; }
+    @media (max-width: 1024px) {
+      .easy-money__item {
+        margin: 0 auto; } }
   .easy-money__item-title {
     font-size: 23px;
     font-weight: bold;
@@ -211,14 +274,27 @@ select, input, textarea {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 110px; }
+    @media (max-width: 768px) {
+      .easy-money__form {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        margin: 0 auto;
+        margin-top: 72px; } }
   .easy-money__form-h2 {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-size: 23px;
     font-weight: bold;
     text-align: left; }
+    @media (max-width: 768px) {
+      .easy-money__form-h2 {
+        margin-bottom: 25px; } }
 
-.easy__form {
+.easy__form,
+.laptop__form {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -226,19 +302,24 @@ select, input, textarea {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-    flex-wrap-align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   max-width: 540px;
   position: relative; }
   @media (max-width: 768px) {
-    .easy__form {
+    .easy__form,
+    .laptop__form {
       margin-top: 24px;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
               flex-direction: column; } }
-  .easy__form-input {
+  .easy__form-input,
+  .laptop__form-input {
     min-width: 414px;
     background: #fff;
     -webkit-border-radius: 60px;
@@ -248,10 +329,12 @@ select, input, textarea {
     font-weight: normal;
     font-size: 18px;
     color: #175E65; }
-    @media (max-width: 768px) {
-      .easy__form-input {
+    @media (max-width: 1024px) {
+      .easy__form-input,
+      .laptop__form-input {
         width: 100%; } }
-  .easy__form-btn {
+  .easy__form-btn,
+  .laptop__form-btn {
     max-width: 240px;
     background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
     background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
@@ -277,19 +360,186 @@ select, input, textarea {
     position: absolute;
     left: 53%;
     top: 0; }
-    @media (max-width: 768px) {
-      .easy__form-btn {
+    @media (max-width: 1024px) {
+      .easy__form-btn,
+      .laptop__form-btn {
         max-width: 100%;
         position: relative;
         left: 0;
         margin-top: 10px; } }
-  .easy__form-text {
+  .easy__form-text,
+  .laptop__form-text {
     color: #fff;
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
     margin-top: 7px;
     text-align: left;
     margin-bottom: 107px; }
+
+.slick-dots {
+  position: absolute; }
+
+.testimonials__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.testimonials__h1 {
+  font-family: Circe;
+  font-size: 35px;
+  color: #175E65;
+  margin-bottom: 63px; }
+
+.testimonials__title {
+  font-family: "Open Sans", sans-serif;
+  font-size: 23px;
+  font-weight: 300;
+  color: #175E65;
+  margin-bottom: 83px; }
+
+.testimonials__items {
+  max-width: 1100px;
+  width: 100%; }
+
+.testimonials__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding-bottom: 18px; }
+
+.testimonials__item-img {
+  width: 146px;
+  height: 146px;
+  margin-right: 47px; }
+  .testimonials__item-img img {
+    width: 100%; }
+
+.testimonials__item-texts {
+  max-width: 587px;
+  font-family: "Open Sans", sans-serif;
+  color: #175E65; }
+
+.testimonials__item-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px; }
+
+.testimonials__item-text {
+  font-size: 23px;
+  font-style: italic;
+  position: relative; }
+  .testimonials__item-text::after {
+    content: url(../img/svg/quotes.svg);
+    position: absolute;
+    right: 0;
+    bottom: -30px; }
+
+.testimonials__text {
+  margin-top: 112px;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 23px;
+  font-weight: 300;
+  color: #175E65;
+  max-width: 780px;
+  margin-bottom: 156px; }
+
+.slick-prev.slick-arrow,
+.slick-next.slick-arrow {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%);
+      -ms-transform: translate(-50%);
+          transform: translate(-50%); }
+
+.slick-next.slick-arrow {
+  right: 0; }
+
+.laptop {
+  background: url(../img/Background-footer.png) no-repeat;
+  background-position-x: center;
+  -webkit-background-size: 100% cover;
+          background-size: 100% cover; }
+  .laptop__wrapper {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 204px 0 112px; }
+  .laptop__texts-text {
+    color: #fff;
+    font-family: "Open Sans", sans-serif;
+    font-size: 23px;
+    max-width: 546px; }
+    .laptop__texts-text:first-child {
+      font-weight: 300;
+      margin-bottom: 20px; }
+    .laptop__texts-text:last-child {
+      font-weight: bold; }
+  .laptop__form {
+    margin-top: 40px; }
+
+.footer {
+  background-color: #175E65;
+  max-width: 1440px;
+  margin: 0 auto; }
+  .footer__wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 auto;
+    position: relative; }
+  .footer-soc {
+    margin-top: 34px; }
+
+.copyright {
+  margin-top: 38px;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 30px; }
+
+.btn-up {
+  position: fixed;
+  right: 200px;
+  bottom: 101px; }
 
 .container {
   max-width: 1100px;
@@ -303,7 +553,7 @@ select, input, textarea {
   margin: 0 auto; }
   @media (max-width: 1100px) {
     .container {
-      padding: 0 17px; } }
+      padding: 0 19px; } }
   @media (max-width: 768px) {
     .container {
       padding: 0 17px; } }
@@ -315,11 +565,14 @@ select, input, textarea {
   background: url(../img/Background-header.png) no-repeat;
   -webkit-background-size: cover;
           background-size: cover; }
-  @media (max-width: 768px) {
+  @media (max-width: 375px) {
     .header {
-      background: url(../img/Background-header-mob.png) no-repeat;
-      -webkit-background-size: cover;
-              background-size: cover; } }
+      background: url(../img/Background-header-mob.png) no-repeat; } }
+  .header__menu {
+    display: none; }
+    @media (max-width: 1024px) {
+      .header__menu {
+        display: block; } }
   .header__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -331,6 +584,64 @@ select, input, textarea {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 28px; }
+    @media (max-width: 1024px) {
+      .header__wrapper {
+        margin-top: 13px; } }
+  .header__wrapper-mob {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-height: 710px;
+    height: 100vh;
+    width: 100%;
+    display: none;
+    background: url(../img/Background-header.png) no-repeat; }
+    @media (max-width: 375px) {
+      .header__wrapper-mob {
+        background: url(../img/Background-header-mob.png) no-repeat; } }
+  .header__mob {
+    width: 100%;
+    padding: 13px 19px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  @media (max-width: 1024px) {
+    .header__nav {
+      display: none; } }
+  @media (max-width: 1024px) {
+    .header__logo {
+      width: 100%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+  .header__logo-mob {
+    margin-bottom: 82px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%; }
+  .header__mob-ul {
+    font-family: "Open Sans", sans-serif;
+    color: #fff;
+    font-size: 18px; }
+  .header__mob-li {
+    margin-bottom: 25px; }
   .header__ul {
     display: -webkit-box;
     display: -webkit-flex;
@@ -345,11 +656,22 @@ select, input, textarea {
     font-size: 18px;
     color: #fff; }
 
+@media (max-width: 1024px) {
+  .socials {
+    display: none; } }
+
 .socials__link {
   margin: 0 10px; }
 
-.mob__nav {
-  display: none; }
+.socials-mob {
+  margin-top: 49px; }
+
+.socials-mob__link {
+  margin: 0 10px; }
+  .socials-mob__link:first-child {
+    margin-left: 0; }
+  .socials-mob__link:last-child {
+    margin-right: 0; }
 
 .people {
   display: -webkit-box;
@@ -360,7 +682,7 @@ select, input, textarea {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
-  @media (max-width: 1024px) {
+  @media (max-width: 1220px) {
     .people {
       margin: 0 auto; } }
   .people__title-outer {
@@ -422,7 +744,7 @@ select, input, textarea {
   .people__img {
     margin-top: 70px;
     margin-left: 209px; }
-    @media (max-width: 1024px) {
+    @media (max-width: 1220px) {
       .people__img {
         display: none; } }
 
@@ -431,9 +753,6 @@ select, input, textarea {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -441,7 +760,13 @@ select, input, textarea {
   width: 100%;
   max-width: 540px;
   margin-top: 34px;
-  position: relative; }
+  background-color: #fff;
+  -webkit-border-radius: 60px;
+          border-radius: 60px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
   @media (max-width: 768px) {
     .header__form {
       margin-top: 24px;
@@ -449,9 +774,9 @@ select, input, textarea {
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
-              flex-direction: column; } }
+              flex-direction: column;
+      background-color: transparent; } }
   .header__form-input {
-    min-width: 414px;
     background: #fff;
     -webkit-border-radius: 60px;
             border-radius: 60px;
@@ -486,13 +811,10 @@ select, input, textarea {
         -ms-flex-pack: center;
             justify-content: center;
     padding: 13px 0;
-    position: absolute;
     left: 53%; }
     @media (max-width: 768px) {
       .header__form-btn {
         max-width: 100%;
-        position: relative;
-        left: 0;
         margin-top: 10px; } }
 
 html, body {
