--- a/app/pug/blocks/_footer.pug
+++ b/app/pug/blocks/_footer.pug
@@ -1,1 +1,26 @@
-footer
+footer.footer
+    .container
+        .footer__wrapper
+            nav.header__nav
+                ul.header__ul
+                    li.header__li
+                        a.header__link(href='#') Start Page
+                    li.header__li
+                        a.header__link(href='#') About Us
+                    li.header__li
+                        a.header__link(href='#') Easy Money
+                    li.header__li
+                        a.header__link(href='#') Testimonials
+            .socials.footer-soc
+                a.socials__link(href='')
+                    img(src='img/svg/twitter.svg')
+                a.socials__link(href='')
+                    img(src='img/svg/facebook.svg')
+                a.socials__link(href='')
+                    img(src='img/svg/insta.svg')
+                a.socials__link(href='')
+                    img(src='img/svg/ufo.svg')
+            .copyright
+                | © 2019 All Rights Reserved
+            a(href='header').btn-up
+               img(src='img/svg/btn-up.svg')
