--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -5,9 +5,20 @@
     width: 50%
     margin-bottom: 65px
 
+
+    @include media(1024)
+      width: 100%
+
     img
       margin-left: -33px
-  
+
+      @include media(1200)
+        margin-left: 0
+
+
+    @include media(1024)
+      margin-bottom: 20px
+
   &__wrapper
     display: flex
     align-items: center
@@ -15,9 +26,18 @@
     margin-top: 35px
     width: 100%
 
+    @include media(1024)
+      flex-direction: column
+      flex-wrap: wrap
+      justify-content: center
+
   &__outer
     width: 50%
     margin-left: 152px
+
+    @include media(1024)
+      margin-left: 0
+      width: 100%
 
   &__title
     font-family: Circe
@@ -37,13 +57,22 @@
     &:last-child
       font-weight: bold
       margin-top: 25px
+
+      @include media(1024)
+        margin-bottom: 49px
       
 .easy-money
   display: flex
+  flex: 1 1
   justify-content: center
   margin: 0 auto
   background: url(../img/Background-easy-money.png) no-repeat
   background-position-x: center
+
+  @include media(768)
+    background: url(../img/Background-easy-money-mob.png) no-repeat
+    background-position-x: center
+    background-size: cover
 
   &__wrapper
     display: flex
@@ -51,6 +80,9 @@
     flex-direction: column
     margin-top: 121px
     text-align: center
+
+    @include media(1024)
+      margin-top: 49px
 
   &__title
     color: #fff
@@ -64,11 +96,25 @@
     margin-top: 77px
     font-family: 'Open Sans', sans-serif
     color: #FFF5BB
+    width: 100%
+    max-width: 1024px
+
+    @include media(1024)
+      margin-top: 31px
 
   &__item
+    display: flex!important
+    flex-direction: column
+    flex-wrap: wrap
     width: 33%
     max-width: 300px
     margin: 0 50px
+
+
+    @include media(1024)
+      margin: 0 auto
+
+
 
   &__item-title
     font-size: 23px
@@ -81,6 +127,11 @@
     justify-content: space-between
     margin-top: 110px
 
+    @include media(768)
+      flex-direction: column
+      margin: 0 auto
+      margin-top: 72px
+
   &__form-h2
     color: #fff
     font-family: 'Open Sans', sans-serif
@@ -88,10 +139,14 @@
     font-weight: bold
     text-align: left
 
-.easy__form
+    @include media(768)
+      margin-bottom: 25px
+
+.easy__form,
+.laptop__form
   display: flex
   flex-wrap: wrap
-      align-items: center
+  align-items: center
   width: 100%
   max-width: 540px
   position: relative
@@ -110,7 +165,7 @@
     font-size: 18px
     color: #175E65
 
-    @include media(768)
+    @include media(1024)
       width: 100%
 
   &-btn
@@ -130,7 +185,7 @@
     left: 53%
     top: 0
 
-    @include media(768)
+    @include media(1024)
       max-width: 100%
       position: relative
       left: 0
@@ -143,3 +198,115 @@
     margin-top: 7px
     text-align: left
     margin-bottom: 107px
+
+.slick-dots
+  position: absolute
+
+.testimonials
+
+
+  &__wrapper
+    display: flex
+    width: 100%
+    flex-direction: column
+    align-items: center
+
+  &__h1
+    font-family: Circe
+    font-size: 35px
+    color: #175E65
+    margin-bottom: 63px
+
+  &__title
+    font-family: "Open Sans", sans-serif
+    font-size: 23px
+    font-weight: 300
+    color: #175E65
+    margin-bottom: 83px
+
+  &__items
+    max-width: 1100px
+    width: 100%
+
+  &__item
+    display: flex
+    align-items: center
+    justify-content: center
+    width: 100%
+    padding-bottom: 18px
+
+  &__item-img
+    width: 146px
+    height: 146px
+    margin-right: 47px
+
+    img
+      width: 100%
+      
+  &__item-texts
+    max-width: 587px
+    font-family: "Open Sans", sans-serif
+    color: #175E65
+
+
+  &__item-title
+    font-size: 20px
+    font-weight: bold
+    margin-bottom: 10px
+
+  &__item-text
+    font-size: 23px
+    font-style: italic
+    position: relative
+
+    &::after
+      content: url(../img/svg/quotes.svg)
+      position: absolute
+      right: 0
+      bottom: -30px
+
+  &__text
+    margin-top: 112px
+    text-align: center
+    font-family: "Open Sans", sans-serif
+    font-size: 23px
+    font-weight: 300
+    color: #175E65
+    max-width: 780px
+    margin-bottom: 156px
+
+.slick-prev.slick-arrow,
+.slick-next.slick-arrow
+  position: absolute
+  top: 50%
+  transform: translate(-50%)
+
+.slick-next.slick-arrow
+  right: 0
+
+.laptop
+  background: url(../img/Background-footer.png) no-repeat
+  background-position-x: center
+  background-size: 100% cover
+
+
+  &__wrapper
+    width: 100%
+    display: flex
+    padding: 204px 0 112px
+
+  &__texts-text
+    color: #fff
+    font-family: "Open Sans", sans-serif
+    font-size: 23px
+    max-width: 546px
+
+    &:first-child
+      font-weight: 300
+      margin-bottom: 20px
+
+    &:last-child
+      font-weight: bold
+
+  &__form
+    margin-top: 40px
