--- a/app/pug/blocks/_footer.pug
+++ b/app/pug/blocks/_footer.pug
@@ -1,16 +1,16 @@
 footer.footer
     .container
         .footer__wrapper
-            nav.header__nav
-                ul.header__ul
-                    li.header__li
-                        a.header__link(href='#') Start Page
-                    li.header__li
-                        a.header__link(href='#') About Us
-                    li.header__li
-                        a.header__link(href='#') Easy Money
-                    li.header__li
-                        a.header__link(href='#') Testimonials
+            nav.footer__nav
+                ul.footer__ul
+                    li.footer__li
+                        a.footer__link(href='#') Start Page
+                    li.footer__li
+                        a.footer__link(href='#') About Us
+                    li.footer__li
+                        a.footer__link(href='#') Easy Money
+                    li.footer__li
+                        a.footer__link(href='#') Testimonials
             .socials.footer-soc
                 a.socials__link(href='')
                     img(src='img/svg/twitter.svg')
