--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -50,7 +50,7 @@ header.header
                             img(src='img/svg/ufo.svg')
         .people
             .people__title-outer
-                h1.people__h1 | Play the Virtual
+                h1.people__h1 Play the Virtual
                     br
                     | Stock Market
                     br
