--- a/app/css/main.css
+++ b/app/css/main.css
@@ -221,19 +221,15 @@ select, input, textarea {
     font-size: 35px;
     font-weight: bold; }
   .easy-money__item-outer {
+    margin-top: 77px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 77px;
     font-family: 'Open Sans', sans-serif;
     color: #FFF5BB;
     width: 100%;
-    max-width: 1024px; }
+    max-width: 970px; }
     @media (max-width: 1024px) {
       .easy-money__item-outer {
         margin-top: 31px; } }
@@ -253,6 +249,10 @@ select, input, textarea {
     width: 33%;
     max-width: 300px;
     margin: 0 50px; }
+    .easy-money__item:first-child {
+      margin-left: 0; }
+    .easy-money__item:last-child {
+      margin-right: 0; }
     @media (max-width: 1024px) {
       .easy-money__item {
         margin: 0 auto; } }
@@ -260,6 +260,8 @@ select, input, textarea {
     font-size: 23px;
     font-weight: bold;
     margin-top: 21px; }
+  .easy-money__form-outer {
+    max-width: 540px; }
   .easy-money__form {
     display: -webkit-box;
     display: -webkit-flex;
@@ -274,7 +276,7 @@ select, input, textarea {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 110px; }
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
       .easy-money__form {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -288,10 +290,17 @@ select, input, textarea {
     font-family: 'Open Sans', sans-serif;
     font-size: 23px;
     font-weight: bold;
-    text-align: left; }
+    text-align: left;
+    width: 50%; }
+    @media (max-width: 1024px) {
+      .easy-money__form-h2 {
+        width: 100%;
+        margin-bottom: 25px; } }
     @media (max-width: 768px) {
       .easy-money__form-h2 {
         margin-bottom: 25px; } }
+  .easy-money__form-outer {
+    width: 50%; }
 
 .easy__form,
 .laptop__form {
@@ -308,7 +317,18 @@ select, input, textarea {
           align-items: center;
   width: 100%;
   max-width: 540px;
-  position: relative; }
+  position: relative;
+  background-color: #fff;
+  -webkit-border-radius: 60px;
+          border-radius: 60px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (max-width: 1024px) {
+    .easy__form,
+    .laptop__form {
+      background-color: transparent; } }
   @media (max-width: 768px) {
     .easy__form,
     .laptop__form {
@@ -320,7 +340,6 @@ select, input, textarea {
               flex-direction: column; } }
   .easy__form-input,
   .laptop__form-input {
-    min-width: 414px;
     background: #fff;
     -webkit-border-radius: 60px;
             border-radius: 60px;
@@ -357,7 +376,6 @@ select, input, textarea {
         -ms-flex-pack: center;
             justify-content: center;
     padding: 13px 0;
-    position: absolute;
     left: 53%;
     top: 0; }
     @media (max-width: 1024px) {
@@ -374,7 +392,8 @@ select, input, textarea {
     font-family: 'Open Sans', sans-serif;
     margin-top: 7px;
     text-align: left;
-    margin-bottom: 107px; }
+    margin-bottom: 107px;
+    max-width: 540px; }
 
 .slick-dots {
   position: absolute; }
@@ -481,6 +500,10 @@ select, input, textarea {
   background-position-x: center;
   -webkit-background-size: 100% cover;
           background-size: 100% cover; }
+  @media (max-width: 375px) {
+    .laptop {
+      background: url(../img/Background-footer-mob.png) no-repeat;
+      background-position: bottom; } }
   .laptop__wrapper {
     width: 100%;
     display: -webkit-box;
@@ -488,18 +511,114 @@ select, input, textarea {
     display: -ms-flexbox;
     display: flex;
     padding: 204px 0 112px; }
+    @media (max-width: 1024px) {
+      .laptop__wrapper {
+        padding: 204px 0 52px; } }
+    @media (max-width: 550px) {
+      .laptop__wrapper {
+        padding: 204px 0 26px; } }
+    @media (max-width: 390px) {
+      .laptop__wrapper {
+        padding: 109px 0px 89px; } }
+    @media (max-width: 375px) {
+      .laptop__wrapper {
+        padding: 75px 0 66px; } }
+  .laptop__texts {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%; }
   .laptop__texts-text {
     color: #fff;
     font-family: "Open Sans", sans-serif;
     font-size: 23px;
     max-width: 546px; }
+    @media (max-width: 375px) {
+      .laptop__texts-text {
+        font-size: 18px; } }
     .laptop__texts-text:first-child {
       font-weight: 300;
       margin-bottom: 20px; }
     .laptop__texts-text:last-child {
       font-weight: bold; }
   .laptop__form {
-    margin-top: 40px; }
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 540px;
+    margin-top: 34px;
+    background-color: #fff;
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  @media (max-width: 768px) {
+    .laptop {
+      margin-top: 24px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      background-color: transparent; } }
+  .laptop-input {
+    background: #fff;
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    font-family: 'Open Sans', sans-serif;
+    padding: 12px 16px;
+    font-weight: normal;
+    font-size: 18px;
+    color: #175E65; }
+    @media (max-width: 768px) {
+      .laptop-input {
+        width: 100%; } }
+  .laptop-btn {
+    max-width: 240px;
+    background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
+    background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: -o-linear-gradient(left, #F86544 0%, #D83B17 100%);
+    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%);
+    -webkit-border-radius: 60px;
+            border-radius: 60px;
+    color: #fff;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 13px 0;
+    left: 53%; }
+    @media (max-width: 768px) {
+      .laptop-btn {
+        max-width: 100%;
+        margin-top: 10px; } }
+
+@media (max-width: 1024px) {
+  .laptop__form {
+    background: none; } }
 
 .footer {
   background-color: #175E65;
@@ -524,9 +643,40 @@ select, input, textarea {
         -ms-flex-pack: center;
             justify-content: center;
     margin: 0 auto;
-    position: relative; }
+    width: 100%; }
+    @media (max-width: 375px) {
+      .footer__wrapper {
+        margin-top: 35px; } }
   .footer-soc {
     margin-top: 34px; }
+    @media (max-width: 375px) {
+      .footer-soc {
+        margin-top: 19px; } }
+  .footer__ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 81px; }
+    @media (max-width: 768px) {
+      .footer__ul {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        margin-left: 0; } }
+  .footer__li {
+    margin-right: 43px; }
+    @media (max-width: 768px) {
+      .footer__li {
+        margin-right: 0;
+        margin-bottom: 15px; } }
+  .footer__link {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #fff; }
 
 .copyright {
   margin-top: 38px;
@@ -535,11 +685,27 @@ select, input, textarea {
   font-weight: 300;
   font-size: 12px;
   margin-bottom: 30px; }
+  @media (max-width: 375px) {
+    .copyright {
+      margin-top: 34px; } }
 
 .btn-up {
   position: fixed;
   right: 200px;
   bottom: 101px; }
+  @media (max-width: 1024px) {
+    .btn-up {
+      right: 20px; } }
+  @media (max-width: 375px) {
+    .btn-up {
+      right: 0;
+      bottom: 230px; } }
+
+.socials.footer-soc {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
 
 .container {
   max-width: 1100px;
@@ -624,7 +790,11 @@ select, input, textarea {
       -webkit-box-pack: justify;
       -webkit-justify-content: space-between;
           -ms-flex-pack: justify;
-              justify-content: space-between; } }
+              justify-content: space-between;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; } }
   .header__logo-mob {
     margin-bottom: 82px;
     display: -webkit-box;
@@ -636,6 +806,9 @@ select, input, textarea {
         -ms-flex-pack: justify;
             justify-content: space-between;
     width: 100%; }
+    @media (max-width: 375px) {
+      .header__logo-mob {
+        margin-bottom: 46px; } }
   .header__mob-ul {
     font-family: "Open Sans", sans-serif;
     color: #fff;
@@ -655,6 +828,20 @@ select, input, textarea {
     font-weight: 600;
     font-size: 18px;
     color: #fff; }
+    @media (max-width: 375px) {
+      .header__link {
+        max-width: 160px; } }
+  @media (max-width: 375px) {
+    .header-mob__link {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      max-width: 160px; } }
 
 @media (max-width: 1024px) {
   .socials {
