--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -91,13 +91,12 @@
     font-weight: bold
 
   &__item-outer
-    display: flex
-    justify-content: center
     margin-top: 77px
+    display: flex
     font-family: 'Open Sans', sans-serif
     color: #FFF5BB
     width: 100%
-    max-width: 1024px
+    max-width: 970px
 
     @include media(1024)
       margin-top: 31px
@@ -110,6 +109,11 @@
     max-width: 300px
     margin: 0 50px
 
+    &:first-child
+      margin-left: 0
+
+    &:last-child
+      margin-right: 0
 
     @include media(1024)
       margin: 0 auto
@@ -121,13 +125,16 @@
     font-weight: bold
     margin-top: 21px
 
+  &__form-outer
+    max-width: 540px
+
   &__form
     display: flex
     align-items: flex-start
     justify-content: space-between
     margin-top: 110px
 
-    @include media(768)
+    @include media(1024)
       flex-direction: column
       margin: 0 auto
       margin-top: 72px
@@ -138,9 +145,17 @@
     font-size: 23px
     font-weight: bold
     text-align: left
+    width: 50%
+
+    @include media(1024)
+      width: 100%
+      margin-bottom: 25px
 
     @include media(768)
       margin-bottom: 25px
+
+  &__form-outer
+    width: 50%
 
 .easy__form,
 .laptop__form
@@ -150,13 +165,19 @@
   width: 100%
   max-width: 540px
   position: relative
+  background-color: #fff
+  border-radius: 60px
+  justify-content: space-between
+
+  @include media(1024)
+    background-color: transparent
+
 
   @include media(768)
     margin-top: 24px
     flex-direction: column
 
   &-input
-    min-width: 414px
     background: #fff
     border-radius: 60px
     font-family: 'Open Sans', sans-serif
@@ -181,7 +202,6 @@
     width: 100%
     justify-content: center
     padding: 13px 0
-    position: absolute
     left: 53%
     top: 0
 
@@ -198,6 +218,7 @@
     margin-top: 7px
     text-align: left
     margin-bottom: 107px
+    max-width: 540px
 
 .slick-dots
   position: absolute
@@ -289,17 +310,40 @@
   background-position-x: center
   background-size: 100% cover
 
+  @include media(375)
+    background: url(../img/Background-footer-mob.png) no-repeat
+    background-position: bottom
 
   &__wrapper
     width: 100%
     display: flex
     padding: 204px 0 112px
 
+    @include media(1024)
+      padding: 204px 0 52px
+
+    @include media(550)
+      padding: 204px 0 26px
+
+    @include media(390)
+      padding: 109px 0px 89px
+
+    @include media(375)
+      padding: 75px 0 66px
+
+  &__texts
+    display: flex
+    flex-direction: column
+    width: 100%
+
   &__texts-text
     color: #fff
     font-family: "Open Sans", sans-serif
     font-size: 23px
     max-width: 546px
+
+    @include media(375)
+      font-size: 18px
 
     &:first-child
       font-weight: 300
@@ -309,4 +353,53 @@
       font-weight: bold
 
   &__form
-    margin-top: 40px
+    display: flex
+    align-items: center
+    width: 100%
+    max-width: 540px
+    margin-top: 34px
+    background-color: #fff
+    border-radius: 60px
+    justify-content: space-between
+
+
+  @include media(768)
+    margin-top: 24px
+    flex-direction: column
+    background-color: transparent
+
+  &-input
+    background: #fff
+    border-radius: 60px
+    font-family: 'Open Sans', sans-serif
+    padding: 12px 16px
+    font-weight: normal
+    font-size: 18px
+    color: #175E65
+
+    @include media(768)
+      width: 100%
+
+  &-btn
+    max-width: 240px
+    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
+    border-radius: 60px
+    color: #fff
+    font-size: 18px
+    font-family: 'Open Sans', sans-serif
+    font-weight: bold
+    text-transform: uppercase
+    display: flex
+    width: 100%
+    justify-content: center
+    padding: 13px 0
+    left: 53%
+
+    @include media(768)
+      max-width: 100%
+      margin-top: 10px
+
+.laptop__form
+
+  @include media(1024)
+    background: none
