Adaptive is done

--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -3,7 +3,7 @@ header.header
         .header__wrapper
             .header__logo
                 a.header__link(href='#')
-                    img(src='img/svg/logo.svg')
+                    img(src='img/svg/Logo.svg')
                 .header__menu
                     img(src='img/svg/Menu.svg')
             nav.header__nav
