--- a/app/css/main.css
+++ b/app/css/main.css
@@ -178,18 +178,6 @@ select, input, textarea {
         margin-bottom: 49px; } }
 
 .easy-money {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1;
-      -ms-flex: 1 1;
-          flex: 1 1;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin: 0 auto;
   background: url(../img/Background-easy-money.png) no-repeat;
   background-position-x: center; }
@@ -226,10 +214,14 @@ select, input, textarea {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-family: 'Open Sans', sans-serif;
     color: #FFF5BB;
     width: 100%;
-    max-width: 970px; }
+    max-width: 1100px; }
     @media (max-width: 1024px) {
       .easy-money__item-outer {
         margin-top: 31px; } }
@@ -246,8 +238,6 @@ select, input, textarea {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-    width: 33%;
-    max-width: 300px;
     margin: 0 50px; }
     .easy-money__item:first-child {
       margin-left: 0; }
@@ -260,6 +250,10 @@ select, input, textarea {
     font-size: 23px;
     font-weight: bold;
     margin-top: 21px; }
+  @media (max-width: 1024px) {
+    .easy-money__item-text {
+      max-width: 320px;
+      margin: 0 auto; } }
   .easy-money__form-outer {
     max-width: 540px; }
   .easy-money__form {
@@ -291,13 +285,11 @@ select, input, textarea {
     font-size: 23px;
     font-weight: bold;
     text-align: left;
-    width: 50%; }
+    max-width: 500px; }
     @media (max-width: 1024px) {
       .easy-money__form-h2 {
         width: 100%;
-        margin-bottom: 25px; } }
-    @media (max-width: 768px) {
-      .easy-money__form-h2 {
+        font-size: 18px;
         margin-bottom: 25px; } }
   .easy-money__form-outer {
     width: 50%; }
@@ -317,7 +309,6 @@ select, input, textarea {
           align-items: center;
   width: 100%;
   max-width: 540px;
-  position: relative;
   background-color: #fff;
   -webkit-border-radius: 60px;
           border-radius: 60px;
@@ -375,9 +366,7 @@ select, input, textarea {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding: 13px 0;
-    left: 53%;
-    top: 0; }
+    padding: 13px 0; }
     @media (max-width: 1024px) {
       .easy__form-btn,
       .laptop__form-btn {
@@ -394,9 +383,32 @@ select, input, textarea {
     text-align: left;
     margin-bottom: 107px;
     max-width: 540px; }
+    @media (max-width: 1024px) {
+      .easy__form-text,
+      .laptop__form-text {
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 138px; } }
 
 .slick-dots {
-  position: absolute; }
+  position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  bottom: -36px; }
+  .slick-dots button {
+    font-size: 0;
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    opacity: .25;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    margin: 6px; }
+
+.slick-active button {
+  opacity: 1; }
 
 .testimonials__wrapper {
   display: -webkit-box;
@@ -419,6 +431,9 @@ select, input, textarea {
   font-size: 35px;
   color: #175E65;
   margin-bottom: 63px; }
+  @media (max-width: 1024px) {
+    .testimonials__h1 {
+      margin: 21px auto; } }
 
 .testimonials__title {
   font-family: "Open Sans", sans-serif;
@@ -426,6 +441,20 @@ select, input, textarea {
   font-weight: 300;
   color: #175E65;
   margin-bottom: 83px; }
+  @media (max-width: 375px) {
+    .testimonials__title span {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
+  @media (max-width: 1024px) {
+    .testimonials__title {
+      font-size: 16px;
+      margin-bottom: 56px;
+      text-align: center; } }
 
 .testimonials__items {
   max-width: 1100px;
@@ -446,6 +475,28 @@ select, input, textarea {
           justify-content: center;
   width: 100%;
   padding-bottom: 18px; }
+  @media (max-width: 1024px) {
+    .testimonials__item {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; } }
+
+.testimonials__items-outer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 .testimonials__item-img {
   width: 146px;
@@ -453,26 +504,50 @@ select, input, textarea {
   margin-right: 47px; }
   .testimonials__item-img img {
     width: 100%; }
+  @media (max-width: 1024px) {
+    .testimonials__item-img {
+      width: 100px;
+      height: 100px;
+      margin-right: 0; } }
 
 .testimonials__item-texts {
   max-width: 587px;
   font-family: "Open Sans", sans-serif;
-  color: #175E65; }
+  color: #175E65;
+  text-align: left; }
+  @media (max-width: 1024px) {
+    .testimonials__item-texts {
+      text-align: center; } }
 
 .testimonials__item-title {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px; }
+  @media (max-width: 1024px) {
+    .testimonials__item-title {
+      font-size: 14px;
+      margin-top: 23px; } }
 
 .testimonials__item-text {
   font-size: 23px;
   font-style: italic;
   position: relative; }
+  @media (max-width: 1024px) {
+    .testimonials__item-text {
+      font-size: 18px; } }
   .testimonials__item-text::after {
     content: url(../img/svg/quotes.svg);
     position: absolute;
     right: 0;
     bottom: -30px; }
+    @media (max-width: 1024px) {
+      .testimonials__item-text::after {
+        right: 633px;
+        bottom: 50px;
+        -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+                transform: rotate(180deg);
+        z-index: -1; } }
 
 .testimonials__text {
   margin-top: 112px;
@@ -483,17 +558,59 @@ select, input, textarea {
   color: #175E65;
   max-width: 780px;
   margin-bottom: 156px; }
+  @media (max-width: 1024px) {
+    .testimonials__text {
+      margin-top: 62px;
+      font-size: 16px;
+      margin-bottom: 45px; } }
 
 .slick-prev.slick-arrow,
 .slick-next.slick-arrow {
   position: absolute;
   top: 50%;
-  -webkit-transform: translate(-50%);
-      -ms-transform: translate(-50%);
-          transform: translate(-50%); }
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+  @media (max-width: 1024px) {
+    .slick-prev.slick-arrow,
+    .slick-next.slick-arrow {
+      display: none !important; }
+      .slick-prev.slick-arrow .slick-next.slick-arrow,
+      .slick-next.slick-arrow .slick-next.slick-arrow {
+        right: -20px; } }
 
 .slick-next.slick-arrow {
-  right: 0; }
+  right: -43px; }
+
+.slick-prev.slick-arrow {
+  left: -15px; }
+
+.testimonials__items.slick-initialized.slick-slider.slick-dotted .slick-dots {
+  display: none; }
+  @media (max-width: 1024px) {
+    .testimonials__items.slick-initialized.slick-slider.slick-dotted .slick-dots {
+      position: absolute;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      bottom: -16px; }
+      .testimonials__items.slick-initialized.slick-slider.slick-dotted .slick-dots button {
+        font-size: 0;
+        width: 15px;
+        height: 15px;
+        background: #fff;
+        opacity: .25;
+        -webkit-border-radius: 50%;
+                border-radius: 50%;
+        margin: 6px;
+        background: #F86544; } }
+  .testimonials__items.slick-initialized.slick-slider.slick-dotted .slick-dots .slick-active button {
+    opacity: 1; }
 
 .laptop {
   background: url(../img/Background-footer.png) no-repeat;
@@ -719,10 +836,7 @@ select, input, textarea {
   margin: 0 auto; }
   @media (max-width: 1100px) {
     .container {
-      padding: 0 19px; } }
-  @media (max-width: 768px) {
-    .container {
-      padding: 0 17px; } }
+      padding: 0 18px; } }
 
 .header {
   max-width: 1440px;
@@ -868,7 +982,10 @@ select, input, textarea {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  max-width: 1100px;
+  margin-top: 80px;
+  width: 100%; }
   @media (max-width: 1220px) {
     .people {
       margin: 0 auto; } }
@@ -882,8 +999,7 @@ select, input, textarea {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    max-width: 621px;
-    margin-top: 80px; }
+    max-width: 621px; }
     @media (max-width: 1024px) {
       .people__title-outer {
         margin-top: 46px; } }
@@ -929,8 +1045,7 @@ select, input, textarea {
     max-width: 524px;
     margin-top: 7px; }
   .people__img {
-    margin-top: 70px;
-    margin-left: 209px; }
+    margin-right: -80px; }
     @media (max-width: 1220px) {
       .people__img {
         display: none; } }
