--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -5,10 +5,7 @@
   margin: 0 auto
 
   @include media(1100)
-    padding: 0 19px
-
-  @include media(768)
-    padding: 0 17px
+    padding: 0 18px
 
 .header
   max-width: 1440px
@@ -138,6 +135,9 @@
 .people
   display: flex
   justify-content: space-between
+  max-width: 1100px
+  margin-top: 80px
+  width: 100%
 
   @include media(1220)
     margin: 0 auto
@@ -146,7 +146,6 @@
     display: flex
     flex-direction: column
     max-width: 621px
-    margin-top: 80px
 
     @include media(1024)
       margin-top: 46px
@@ -197,9 +196,8 @@
     margin-top: 7px
 
   &__img
-    margin-top: 70px
-    margin-left: 209px
-
+    margin-right: -80px
+    
     @include media(1220)
       display: none
 
