--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -17,7 +17,7 @@
 
 
     @include media(1024)
-      margin-bottom: 20px
+      margin-bottom: 24px
 
   &__wrapper
     display: flex
@@ -45,10 +45,16 @@
     font-size: 35px
     color: #175E65
 
+    @include media(1024)
+      font-size: 25px
+
   &__text
     font-family: 'Open Sans', sans-serif
     font-size: 18px
     color: #175E65
+
+    @include media(1024)
+      font-size: 16px
 
     &:first-child
       font-weight: 300
