--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -96,3 +96,10 @@ append content
                             | JOIN the Wait List
 
 
+    .popap
+        .congrats
+            .congrats__img
+                img(src="img/svg/Congrats.svg")
+            p.congrats__text Congrats!
+                span You are now оn the Wait List!
+            button  Hurray!
