--- a/app/css/main.css
+++ b/app/css/main.css
@@ -743,6 +743,81 @@ select, input, textarea {
   .laptop__form {
     background: none; } }
 
+.popap {
+  display: none;
+  background: rgba(0, 0, 0, 0.7);
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  z-index: 100; }
+  .popap .congrats {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 600px;
+    max-height: 480px;
+    margin: 137px auto;
+    background: #fff;
+    -webkit-border-radius: 25px;
+            border-radius: 25px; }
+    .popap .congrats__img {
+      max-width: 344px;
+      margin: 34px auto 35px; }
+    .popap .congrats__text {
+      font-family: Circe;
+      line-height: 27px;
+      font-size: 23px;
+      color: #175E65;
+      max-width: 288px;
+      text-align: center;
+      font-weight: bold;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      margin-bottom: 27px; }
+    .popap .congrats button {
+      font-family: 'Open Sans', sans-serif;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+      text-transform: capitalize;
+      background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
+      background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
+      background: -o-linear-gradient(left, #F86544 0%, #D83B17 100%);
+      background: linear-gradient(90deg, #F86544 0%, #D83B17 100%);
+      padding: 12px 0 13px;
+      max-width: 200px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-border-radius: 60px;
+              border-radius: 60px;
+      width: 100%;
+      margin-bottom: 70px; }
+
 .footer {
   background-color: #175E65;
   max-width: 1440px;
